Fix for Bug: Organizations list table content is overflowing outside container #105

--- a/src/organizations/Organization.css
+++ b/src/organizations/Organization.css
@@ -1,7 +1,7 @@
 .container-organizations {
     background: #f7f9fa;
     height: auto;
-    width: 90vw;
+    width: inherit;
     margin: 5em auto;
     -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
     -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
